# DiskFIleSorter

./: CMakeLists.txt  Notes  README.md
Include/: DiskFileSorter.hpp  GenerateNumbers.hpp
Source/: DiskFileSorter.cpp  GenerateNumbers.cpp
Test/: DiskFileSorterTestSuite.cpp
